--- a/package.json
+++ b/package.json
@@ -3,19 +3,15 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "upgrade:tamagui": "yarn up '*tamagui*'@latest '@tamagui/*'@latest",
-    "upgrade:tamagui:canary": "yarn up '*tamagui*'@canary '@tamagui/*'@canary",
-    "start": "npx expo start -c",
-    "android": "npx expo start --android",
-    "ios": "npx expo start --ios",
-    "web": "npx expo start --web",
-    "test": "jest --watchAll"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "android": "expo start --android",
+    "generate-themes": "tamagui generate-themes ./theme-builder.ts ./theme-output.ts",
+    "ios": "expo start --ios",
+    "start": "expo start -c",
+    "web": "expo start --web"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.17",
+    "@tamagui/cli": "^1.108.4",
     "@tamagui/config": "^1.108.4",
     "@tamagui/lucide-icons": "^1.108.4",
     "@tamagui/toast": "^1.108.4",
@@ -29,6 +25,7 @@
     "expo-status-bar": "^1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "lucide-react": "^0.428.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
@@ -47,7 +44,9 @@
     "@tamagui/metro-plugin": "^1.108.4",
     "@types/react": "~18.2.79",
     "@types/react-native": "^0.73.0",
+    "prettier": "^3.3.3",
+    "prettier-plugin-css-order": "^2.1.2",
+    "prettier-plugin-organize-imports": "^4.0.0",
     "typescript": "^5.5.2"
-  },
-  "private": true
+  }
 }
