--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-preset-expo": "^11.0.6",
     "burnt": "^0.12.2",
     "expo": "~51.0.9",
+    "expo-camera": "~15.0.14",
     "expo-font": "~12.0.6",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.15",
