--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-camera": "~15.0.14",
     "expo-font": "~12.0.6",
     "expo-linking": "~6.3.1",
+    "expo-media-library": "~16.0.4",
     "expo-router": "~3.5.15",
     "expo-splash-screen": "~0.27.4",
     "expo-status-bar": "^1.12.1",
