--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "burnt": "^0.12.2",
     "expo": "~51.0.9",
     "expo-camera": "~15.0.14",
+    "expo-dev-client": "~4.0.23",
     "expo-font": "~12.0.6",
     "expo-keep-awake": "~13.0.2",
     "expo-linking": "~6.3.1",
