--- a/package.json
+++ b/package.json
@@ -17,15 +17,19 @@
     "@tamagui/toast": "^1.108.4",
     "babel-preset-expo": "^11.0.6",
     "burnt": "^0.12.2",
-    "expo": "~51.0.9",
+    "drizzle-orm": "^0.33.0",
+    "drizzle-zod": "^0.5.1",
+    "expo": "^51.0.28",
     "expo-camera": "~15.0.14",
     "expo-dev-client": "~4.0.23",
+    "expo-drizzle-studio-plugin": "^0.0.2",
     "expo-font": "~12.0.6",
     "expo-keep-awake": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-media-library": "~16.0.4",
     "expo-router": "~3.5.15",
     "expo-splash-screen": "~0.27.4",
+    "expo-sqlite": "^14.0.6",
     "expo-status-bar": "^1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
@@ -38,7 +42,8 @@
     "react-native-screens": "~3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "^0.19.12",
-    "tamagui": "^1.108.4"
+    "tamagui": "^1.108.4",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@babel/core": "^7.24.6",
@@ -50,6 +55,8 @@
     "@types/bun": "latest",
     "@types/react": "~18.2.79",
     "@types/react-native": "^0.73.0",
+    "babel-plugin-inline-import": "^3.0.0",
+    "drizzle-kit": "^0.24.0",
     "globals": "^15.9.0",
     "typescript": "^5.5.2"
   }
