add drizzle and setup sqlite database schemas and migrations

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,7 +3,7 @@
 		"baseUrl": ".",
 		"rootDir": ".",
 		"importHelpers": true,
-		"allowJs": false,
+		"allowJs": true,
 		"allowSyntheticDefaultImports": true,
 		"allowUnreachableCode": false,
 		"allowUnusedLabels": false,
