--- a/biome.json
+++ b/biome.json
@@ -2,7 +2,7 @@
 	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
 	"organizeImports": {
 		"enabled": true,
-		"ignore": ["./.tamagui/**/*", "./.expo/**/*"]
+		"ignore": ["./.tamagui/**/*", "./.expo/**/*", "./database/migrations/**/*"]
 	},
 	"javascript": {
 		"formatter": {
@@ -25,6 +25,6 @@
 		"ignore": ["./.tamagui/**/*", "./.expo/**/*"],
 		"indentWidth": 4,
 		"lineWidth": 120,
-		"lineEnding": "crlf"
+		"indentStyle": "tab"
 	}
 }
