--- a/biome.json
+++ b/biome.json
@@ -17,7 +17,8 @@
 			"recommended": true,
 			"security": {
 				"noDangerouslySetInnerHtml": "off"
-			}
+			},
+			"style": { "useDefaultParameterLast": "off" }
 		}
 	},
 	"formatter": {
