--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@hookform/resolvers": "^3.9.0",
     "@react-navigation/native": "^6.1.17",
     "@tamagui/cli": "^1.108.4",
     "@tamagui/config": "^1.108.4",
     "@tamagui/lucide-icons": "^1.108.4",
     "@tamagui/toast": "^1.108.4",
+    "@tanstack/react-form": "^0.29.2",
+    "@tanstack/zod-form-adapter": "^0.29.2",
     "babel-preset-expo": "^11.0.6",
     "burnt": "^0.12.2",
     "drizzle-orm": "^0.33.0",
@@ -37,7 +38,6 @@
     "lucide-react": "^0.428.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.52.2",
     "react-native": "0.74.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
