--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,8 +10,8 @@
 		"alwaysStrict": true,
 		"downlevelIteration": true,
 		"esModuleInterop": true,
-		"preserveSymlinks": true,
 		"incremental": true,
+		"preserveSymlinks": true,
 		"jsx": "react-jsx",
 		"module": "system",
 		"moduleResolution": "node",
@@ -19,6 +19,7 @@
 		"noImplicitAny": true,
 		"noImplicitReturns": false,
 		"noUncheckedIndexedAccess": true,
+		"noPropertyAccessFromIndexSignature": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"useUnknownInCatchVariables": true,
