--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@tanstack/zod-form-adapter": "^0.29.2",
     "babel-preset-expo": "^11.0.6",
     "burnt": "^0.12.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "drizzle-orm": "^0.33.0",
     "drizzle-zod": "^0.5.1",
     "expo": "^51.0.28",
@@ -47,6 +49,7 @@
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
     "lucide-react-native": "^0.428.0",
+    "nativewind": "4.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
@@ -55,6 +58,7 @@
     "react-native-screens": "~3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "^0.19.12",
+    "tailwind-merge": "^2.5.2",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -72,6 +76,7 @@
     "globals": "^15.9.0",
     "jest": "^29.7.0",
     "jest-expo": "^51.0.3",
+    "tailwindcss": "^3.4.10",
     "typescript": "^5.5.2"
   }
 }
